# ams2-historic-weather-server

./: Cargo.toml  README.md
src/: main.rs  requests.rs  requests_utils.rs
src/types/: api_response.rs  error.rs  mapped_coords.rs  mod.rs  weather_data.rs
