[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-body-util = "0.1"
chrono = "0.4.38"
async-std = "1.12.0"
serde = {version = "1.0.202", features = ["derive"]}
reqwest = {version = "0.12.4", features = ["json"]}
tokio = { version = "1.37.0", features = ["full"] }
